--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"DouglasChan's Blog",
+    "subTitle":"这是一个用Greek建立的轻量级博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last"，
+    "startSite":"天"
 }
