--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "title":"DouglasChan's Blog",
     "subTitle":"这是一个用Greek建立的轻量级博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"，
+    "GMEEK_VERSION":"last",
     "startSite":"天"
 }
