--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
     "subTitle":"这是一个用Greek建立的轻量级博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
-    "startSite":"天"
+    "startSite":"天",
+    "bottomText":"转载请注明出处",
+    "needComment":1
 }
